<resources>
    <string name="app_name">CarMall</string>
    <string name="_title">Car Mall</string>
    <string name="d_title">Car Details</string>
    <string name="test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="contact">Contact Seller</string>
    <string name="details">Show Details</string>
    <string name="rs">\u20B9</string>
    <string name="maker">Car Maker</string>
    <string name="model">Car Model</string>
    <string name="price">Car Price</string>
    <string name="location">Seller Location</string>
    <string name="send">Send a Mail</string>
    <string name="subject">Subject</string>
    <string name="message">Compose a message..</string>
    <string name="send_msg">Send</string>
    <string name="cancel">Cancel</string>
    <string name="_name">CAR MALL</string>
    <string name="sell">Sell a Car</string>
    <string name="ads">Post an Advertisement</string>
    <string name="ad_title">Ad Title</string>
    <string name="desc">Additional Information</string>
    <string name="save">Save Ad and Post</string>
    <string name="pick">Add Image</string>
    <string name="success">Images Added Successfully.</string>
</resources>
