<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostAdActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/small"
            android:text="@string/ads"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_title" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/medium"
            android:paddingRight="@dimen/medium">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small"
                android:paddingRight="@dimen/small"
                android:text="@string/ad_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium" />

            <EditText
                android:id="@+id/ad_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="@dimen/small"
                android:padding="@dimen/small"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small"
                android:paddingRight="@dimen/small"
                android:text="@string/maker"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium" />

            <EditText
                android:id="@+id/car_maker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="@dimen/small"
                android:padding="@dimen/small"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small"
                android:paddingRight="@dimen/small"
                android:text="@string/model"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium" />

            <EditText
                android:id="@+id/car_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="@dimen/small"
                android:padding="@dimen/small"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small"
                android:paddingRight="@dimen/small"
                android:text="@string/price"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium" />

            <EditText
                android:id="@+id/car_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="@dimen/small"
                android:inputType="number"
                android:padding="@dimen/small"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small"
                android:paddingRight="@dimen/small"
                android:text="@string/location"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium" />

            <EditText
                android:id="@+id/car_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="@dimen/small"
                android:padding="@dimen/small"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small"
                android:paddingRight="@dimen/small">

                <TextView
                    android:id="@+id/added"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold"
                    android:layout_alignParentBottom="true"
                    android:paddingBottom="@dimen/small"
                    android:textColor="@android:color/holo_green_dark"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:paddingLeft="@dimen/large"
                    android:paddingRight="@dimen/large"
                    android:text="@string/pick"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small"
                android:paddingRight="@dimen/small"
                android:text="@string/desc"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium" />

            <EditText
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="top|left"
                android:lines="10"
                android:maxLines="12"
                android:minLines="8"
                android:padding="@dimen/small"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginRight="@dimen/medium"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/save"
            android:textColor="@android:color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>